--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indie-stack-template",
+  "name": "strato-stack-template",
   "private": true,
   "description": "",
   "license": "",
@@ -10,22 +10,24 @@
     "build:remix": "remix build",
     "dev": "run-p dev:*",
     "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "node --require ./mocks ./node_modules/.bin/remix dev",
+    "dev:remix": "./node_modules/.bin/remix dev",
     "format": "prettier --write .",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "postinstall": "remix setup node",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma migrate dev",
     "start": "remix-serve build",
-    "start:mocks": "node --require ./mocks ./node_modules/.bin/remix-serve build",
-    "test": "vitest",
-    "test:e2e:dev": "start-server-and-test dev http://localhost:3000 \"cypress open\"",
-    "pretest:e2e:run": "npm run build",
-    "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"cypress run\"",
-    "typecheck": "tsc -b && tsc -b cypress",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "typecheck": "tsc -b",
+    "validate": "run-p lint typecheck"
   },
-  "prettier": {},
+  "prettier": {
+    "printWidth": 120,
+    "useTabs": false,
+    "singleQuote": true,
+    "semi": false,
+    "arrowParens": "avoid",
+    "trailingComma": "none"
+  },
   "eslintIgnore": [
     "/node_modules",
     "/build",
@@ -43,34 +45,30 @@
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.0.0",
     "@remix-run/dev": "*",
     "@remix-run/eslint-config": "*",
-    "@testing-library/cypress": "^8.0.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
     "@types/eslint": "^8.4.1",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
-    "@vitejs/plugin-react": "^1.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "c8": "^7.11.0",
     "cross-env": "^7.0.3",
-    "cypress": "^9.5.2",
     "esbuild-register": "^3.3.2",
-    "eslint": "^8.11.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.29.4",
     "happy-dom": "^2.49.0",
-    "msw": "^0.39.2",
     "npm-run-all": "^4.1.5",
     "prettier": "2.6.0",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "prisma": "^3.11.0",
-    "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2",
-    "vite-tsconfig-paths": "^3.4.1",
-    "vitest": "^0.7.4"
+    "typescript": "^4.6.2"
   },
   "engines": {
     "node": ">=14"
