--- a/package.json
+++ b/package.json
@@ -55,13 +55,14 @@
     "c8": "^7.11.0",
     "cross-env": "^7.0.3",
     "esbuild-register": "^3.3.2",
-    "eslint": "^7.32.0",
+    "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "happy-dom": "^2.49.0",
     "npm-run-all": "^4.1.5",
     "prettier": "2.6.0",
